# rust-bare-metal-bianry

./: Cargo.toml  README.md
src/: main.rs
